<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpotThatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userSpottedPlaylistRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spotThatRecommendedPlaylistRecyclerView"
            android:layout_width="0dp"
            android:layout_height="213dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SpotifyRecommendedTextView">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/spotMyPlaylistButton"
            android:layout_width="133dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/purple_700"
            android:text="@string/spotMyPlaylist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/SpotifyRecommendedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotThatRecommendation"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:textFontWeight="700"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/spottedPlaylists"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spotThatRecommendedPlaylistRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/mySpottedPlaylistCardView"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_weight="0"
        app:cardBackgroundColor="@color/purple_700"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mySpottedPlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mySpotThatPlaylist"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mySpottedPlaylistRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:visibility="visible"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>